# klinscore

./: .gitignore  .project-registry.yaml  CITATION.cff  CLAUDE.md  Cargo.toml  README.md
docs/: score_definition_spec.md
examples/: load_scores.rs
scores/anesthesiology/: asa.yaml  caprini.yaml  rcri.yaml  stop_bang.yaml
scores/cardiology/: cha2ds2_va.yaml  grace.yaml  has_bled.yaml
scores/nephrology/: egfr_ckd_epi_2021.yaml  kfre.yaml
scores/templates/: score_template.yaml
src/: lib.rs  main.rs  persistence.rs  settings.rs
src/config/: mod.rs  score_definition.rs
src/export/: csv_export.rs  json_export.rs  mod.rs  pdf_export.rs
src/scores/: calculator.rs  formulas.rs  loader.rs  mod.rs
src/ui/: mod.rs  result_display.rs  score_input.rs  specialty_selection.rs
tests/: README.md  integration_tests.rs
